--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-email/components": "^1.0.4",
     "mongoose": "^9.1.2",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-email": "^5.2.1",
+    "resend": "^6.7.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "^19.2.7",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
