--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bcryptjs": "^3.0.3",
     "mongoose": "^9.1.2",
     "next": "16.1.1",
+    "next-auth": "^4.24.13",
+    "pino": "^10.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-email": "^5.2.1",
